--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #progress_bar_back {
-    background-color:burlywood;
+    background-color:gray;
     width: 100px;
     height: 2px;
 }
@@ -7,5 +7,4 @@
 #progress_bar {
     background-color: deeppink;
     height: 2px;
-    width: 0px;
 }
