--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #progress_bar_back {
-    background-color:gray;
-    width: 100px;
+    background-color:burlywood;
+    width: 500px;
     height: 2px;
 }
 
